kubernetes/cage.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cage-demo-ingress
  namespace: felix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nicolascage.workshop.ambient-innovation.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cage-demo-service
          servicePort: 8080
